--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,34 @@
     display: flex;
     flex-direction: column;
 }
+
+.centered {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
+}
+
+.top-right-fix {
+    top: 2%;
+    right: 2%;
+    transform: translate(-5%, -2%);
+    position: fixed;
+}
+
+.fade-in {
+    opacity: 1;
+    animation: fade-in 1.5s linear;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    20% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
