--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,13 @@
     flex-direction: column;
 }
 
+.flexbox-column-centered {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+}
+
 .centered {
     top: 50%;
     left: 50%;
