--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -4,3 +4,17 @@
     transform: translate(-5%, -2%);
     position: fixed;
 }
+
+.graph-container {
+    top: 7%;
+    position: absolute;
+    height: 93%;
+    width: 100%;
+}
+
+.prevent-movement {
+    max-width: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
