--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,11 @@
     position: absolute;
 }
 
-.top-right-fix {
-    top: 2%;
-    right: 2%;
-    transform: translate(-5%, -2%);
-    position: fixed;
+.prevent-movement {
+    max-width: 100%;
+    max-height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .fade-in {
