--- a/src/Components/DisplayGraph.css
+++ b/src/Components/DisplayGraph.css
@@ -1,10 +1,8 @@
 .user-node {
-    width: 12vmin;
-    height: 12vmin;
     border-radius: 50%;
     animation: fade-in 1s ease-in;
     position: absolute;
-    transition: width 0.3s ease-in-out, height 0.3s ease-in-out, font-size 0.3s ease-in-out;
+    transition: width 0.3s ease-in-out, height 0.3s ease-in-out, font-size 0.3s ease-in-out, top 0.2s linear, left 0.2s linear;
 }
 
 .user-node:hover {
