--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,20 +1,14 @@
-.top-left-fix {
-    top: 2%;
-    left: 2%;
-    transform: translate(-5%, -2%);
-    position: fixed;
-}
-
 .graph-container {
-    top: 7%;
+    top: 8%;
     position: absolute;
-    height: 93%;
-    width: 100%;
+    height: 90%;
+    width: 99%;
 }
 
-.prevent-movement {
-    max-width: 100%;
-    max-height: 100%;
-    overflow-x: hidden;
-    overflow-y: hidden;
+.centered {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    position: absolute;
 }
