--- a/src/Components/DisplayGraphHelpers/RenderPerson.css
+++ b/src/Components/DisplayGraphHelpers/RenderPerson.css
@@ -1,3 +1,8 @@
+.person {
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
 .time-difference {
     position: absolute;
     top: 50%;
