--- a/src/Components/InfoGraphic.css
+++ b/src/Components/InfoGraphic.css
@@ -1,6 +1,6 @@
 .info-graphic {
     width: 100%;
-    background:rgb(58, 75, 88);
+    background: rgb(58, 75, 88);
     border-radius: 10px;
 }
 
@@ -66,6 +66,21 @@ div.party-holder {
     background: #425666;
 }
 
+.full-width-height {
+    justify-content: "center";
+    align-content: "center";
+    height: "100%";
+    width: "100%";
+    position: "relative"
+}
+
+.centered {
+    margin-left: "15px";
+    top: "50%";
+    position: "absolute";
+    transform: "translateY(-50%)"
+}
+
 .user-div {
     transition: color 0.3s linear;
 }
@@ -73,6 +88,17 @@ div.party-holder {
 .user-display:hover .user-div {
     color: #2E86C1;
     transition: color 0.3s linear;
+}
+
+.render-person {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background: transparent;
+    border: none;
 }
 
 Button.removal-button {
