--- a/src/Components/InfoGraphic.css
+++ b/src/Components/InfoGraphic.css
@@ -1,158 +1,6 @@
-.info-graphic {
-    width: 100%;
-    background: rgb(58, 75, 88);
-    border-radius: 10px;
-}
-
-.show-change {
-    border-radius: 10%;
-    animation: fade-color-in-yellow 1s ease-in;
-}
-
-@keyframes fade-color-in-yellow {
-    0% {
-        opacity: 0;
-        padding: 15px;
-        background: yellow;
-    }
-    100% {
-        padding: 0px;
-        opacity: 1;
-    }
-}
-
-div.single-row {
-    display: flex;
-    flex-direction: row;
-    flex-grow: 1;
-    border-bottom: dashed 0.1px black;
-    padding: 3px;
-}
-
-div.single-column {
-    display: flex;
-}
-
-div.single-column.label {
-    justify-content: flex-end;
-    flex-basis: 70%;
-}
-
-div.single-column.value {
-    margin-left: 15px;
-    padding-left: 5px;
-    justify-content: flex-start;
-    flex-basis: 30%;
-}
-
-.grow {
-    width: 12vw;
-}
-
-div.party-holder {
-    height: 90%;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.user-display {
-    margin-bottom: 15px;
-    padding: 15px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    animation: fade-in 1s ease-in;
-    border-radius: 10px;
-    background: #425666;
-}
-
-.full-width-height {
-    display: flex;
-    justify-content: "center";
-    align-content: "center";
-    margin-bottom: 15px;
-}
-
-.info-person-name {
+.flexbox {
     display: flex;
     flex: 1 0 auto;
-    font-size: 1.5vw;
-}
-
-.centered {
-    display: flex;
-    align-items: center;
-}
-
-.user-div {
-    transition: color 0.3s linear;
-}
-
-.user-display:hover .user-div {
-    color: #2E86C1;
-    transition: color 0.3s linear;
-}
-
-.render-person {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 2;
-    background: transparent;
-    border: none;
-}
-
-Button.removal-button {
-    position: absolute;
-    right: 2%;
-    top: 50%;
-    transform: translate(-2%, -50%);
-    z-index: 3;
-}
-
-.info-person {
-    position: relative;
-    flex-basis: 40%;
-    margin-top: 5px;
-    padding-top: 5px;
-}
-
-.padding-box {
-    padding: 5px;
-}
-
-.blue-box {
-    border: #2471A3 3px solid;
-}
-
-.red-box {
-    border: #A93226 3px solid;
-}
-
-.flex-basis {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    word-wrap: break-word;
-    white-space: nowrap;
-    justify-content: flex-start;
-}
-
-.flex-basis-15 {
-    width: 15%;
-    flex-basis: 15%;
-}
-
-.flex-basis-20 {
-    width: 20%;
-    flex-basis: 20%;
-}
-
-.flex-basis-35 {
-    width: 35%;
-    flex-basis: 35%;
-    word-wrap: break-word;
-    white-space: pre-wrap;
+    flex-direction: column;
+    margin-left: 15px;
 }
