--- a/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
+++ b/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
@@ -1,10 +1,12 @@
-@import "../DisplayGraph.css";
-
 .dark-background {
     background: #394b59;
     color: white;
     animation: fade-in 1s ease-in;
     position: relative;
+}
+
+.info-person-name {
+    font-size: 2vw;
 }
 
 .flexbox-column {
@@ -14,6 +16,25 @@
     padding: 10px;
     border-radius: 5px;
     margin-bottom: 15px;
+}
+
+.single-row {
+    display: flex;
+    flex: 1 0 auto;
+    margin-bottom: 10px;
+}
+
+.single-column {
+    display: flex;
+    flex: 1 0 auto;
+}
+
+.single-column.label {
+    justify-content: flex-start;
+}
+
+.single-column.value {
+    justify-content: flex-end;
 }
 
 .flexbox-row {
@@ -54,4 +75,41 @@
     50% {
         background: #AED6F1;
     }
+}
+
+.party-holder {
+    display: flex;
+    flex-direction: column;
+}
+
+.user-display {
+    display: flex;
+    align-items: center;
+    animation: fade-in-grow 200ms ease-in;
+}
+
+@keyframes fade-in-grow {
+    0% {
+        opacity: 0;
+        transform: scale(.5);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.user-div {
+    display: flex;
+    flex: 1 0 auto;
+    cursor: pointer;
+}
+
+.user-div:hover {
+    color: #2980B9;
+    transition: color 400ms ease-in-out;
+}
+
+.change-to-pointer {
+    cursor: pointer;
 }
