--- a/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
+++ b/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
@@ -113,3 +113,16 @@
 .change-to-pointer {
     cursor: pointer;
 }
+
+.flexbox-row .flex-basis-15 {
+    display: flex;
+    flex-basis: 15%;
+}
+
+.flexbox-row .flex-basis-20 {
+    flex-basis: 20%;
+}
+
+.flexbox-row .flex-basis-35 {
+    flex-basis: 35%;
+}
