--- a/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
+++ b/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
@@ -114,15 +114,32 @@
     cursor: pointer;
 }
 
+.flexbox-row .flex-basis-10 {
+    display: flex;
+    flex-basis: 10%;
+    margin: 0.5%;
+}
+
 .flexbox-row .flex-basis-15 {
     display: flex;
     flex-basis: 15%;
+    margin: 0.5%;
 }
 
 .flexbox-row .flex-basis-20 {
+    display: flex;
     flex-basis: 20%;
+    margin: 0.5%;
 }
 
 .flexbox-row .flex-basis-35 {
+    display: flex;
     flex-basis: 35%;
+    flex-wrap: wrap;
+    word-break: break-word;
+    margin: 0.5%;
+}
+
+.flexbox-centered {
+    justify-content: center;
 }
