--- a/src/Components/Common/Autocomplete.css
+++ b/src/Components/Common/Autocomplete.css
@@ -1,20 +1,14 @@
-.total-container {
-    position: relative;
-    z-index: 2;
-}
-
 .autocomplete-tag {
     display: flex;
     width: fit-content;
+    height: fit-content;
     color: white;
     background: #154360;
     border-radius: 8px;
     font-size: 12px;
     padding: 3px;
-    
-    position: absolute;
-    top: 3px;
-    left: 13px;
+    margin-right: 10px;
+    animation: fade-in-grow 200ms ease;
 }
 
 .autocomplete-row {
@@ -35,15 +29,33 @@
     left: 10px;
 
     padding: 10px;
-    margin-top: -10px;
     justify-content: center;
     background-color: white;
     border: 1px solid #1B4F72;
-    border-radius: 0px 0px 15px 15px;
+    border-radius: 2px 2px 15px 15px;
 
     height: 200px;
     overflow-y: auto;
     animation: fade-in-grow 200ms ease-in;
+}
+
+.autofill-input {
+    display: flex;
+    flex-grow: 1;
+    margin-right: 10px;
+    transition: width 200ms ease;
+}
+
+.total-container {
+    position: relative;
+    z-index: 2;
+}
+
+.values-container {
+    display: flex;
+    flex-grow: 1;
+    margin-left: 10px;
+    align-items: center;
 }
 
 @keyframes fade-in-grow {
@@ -56,7 +68,6 @@
         max-height: 200px;
     }
 }
-
 
 ::-webkit-scrollbar {
     background: transparent;
