--- a/src/Components/Common/Autocomplete.css
+++ b/src/Components/Common/Autocomplete.css
@@ -2,20 +2,35 @@
     display: flex;
     width: fit-content;
     height: fit-content;
+    flex: 0 0 auto;
     color: white;
     background: #154360;
     border-radius: 8px;
     font-size: 12px;
     padding: 3px;
     margin-right: 10px;
-    animation: fade-in-grow 200ms ease;
+    animation: fade-in 200ms ease-in;
 }
 
 .autocomplete-row {
+    display: flex;
+    flex: 1;
     background-color: white;
     transition: background-color 200ms ease;
     padding: 10px;
     cursor: pointer;
+}
+
+.autocomplete-row .key {
+    display: flex;
+    flex: 1 0 30%;
+}
+
+.autocomplete-row .value {
+    display: flex;
+    flex: 1 0 70%;
+    justify-content: flex-start;
+    text-overflow: ellipsis;
 }
 
 .autocomplete-row:hover {
@@ -23,7 +38,18 @@
     transition: background-color 200ms ease;
 }
 
+.autocomplete-row-selected {
+    background-color: #7DCEA0;
+    transition: background-color 200ms ease;
+}
+
+.autocomplete-row-selected:hover {
+    background-color: #F1948A;
+    transition: background-color 200ms ease;
+}
+
 .autofill-container {
+    z-index: 10;
     position: absolute;
     width: 95%;
     left: 10px;
@@ -46,17 +72,37 @@
     transition: width 200ms ease;
 }
 
+.rendered-values-container {
+    display: flex;
+    max-width: 75%;
+    overflow-x: auto;
+    align-items: center;
+}
+
+.rendered-values-container::-webkit-scrollbar {
+    background: transparent;
+}
+
 .total-container {
     position: relative;
-    z-index: 2;
 }
 
 .values-container {
     display: flex;
     flex-grow: 1;
     margin-left: 10px;
-    align-items: center;
+    align-items: baseline;
 }
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 
 @keyframes fade-in-grow {
     0% {
@@ -67,8 +113,4 @@
         opacity: 1;
         max-height: 200px;
     }
-}
-
-::-webkit-scrollbar {
-    background: transparent;
 }
