--- a/src/Components/Common/Autocomplete.css
+++ b/src/Components/Common/Autocomplete.css
@@ -107,7 +107,7 @@
 @keyframes fade-in-grow {
     0% {
         opacity: 0;
-        max-height: 0px;
+        max-height: 0;
     }
     100% {
         opacity: 1;
