--- a/src/Components/DisplayGraphHelpers/RenderPerson.css
+++ b/src/Components/DisplayGraphHelpers/RenderPerson.css
@@ -29,12 +29,13 @@
     transform: translate(-50%, -50%);
     position: absolute;
     transition: all 300ms ease-in-out;
+    min-width: 2vmin;
+    min-height: 2vmin;
 }
 
 .user-node:hover {
-    width: 15vmin;
-    height: 15vmin;
-    font-size: 2.7vmin;
+    min-width: 4vmin;
+    min-height: 4vmin;
     background: #9A7D0A;
 }
 
