--- a/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
+++ b/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
@@ -116,28 +116,34 @@
 
 .flexbox-row .flex-basis-10 {
     display: flex;
-    flex-basis: 10%;
+    flex: 1 0 10%;
     margin: 0.5%;
+    flex-wrap: wrap;
+    word-break: break-word;
 }
 
 .flexbox-row .flex-basis-15 {
     display: flex;
-    flex-basis: 15%;
+    flex: 1 0 15%;
     margin: 0.5%;
+    flex-wrap: wrap;
+    word-break: break-word;
 }
 
 .flexbox-row .flex-basis-20 {
     display: flex;
-    flex-basis: 20%;
+    flex: 1 0 20%;
     margin: 0.5%;
+    flex-wrap: wrap;
+    word-break: break-word;
 }
 
 .flexbox-row .flex-basis-35 {
     display: flex;
-    flex-basis: 35%;
+    flex: 1 0 35%;
+    margin: 0.5%;
     flex-wrap: wrap;
     word-break: break-word;
-    margin: 0.5%;
 }
 
 .flexbox-centered {
