--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,12 @@
     position: absolute;
 }
 
+.centered .center-button {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
 .prevent-movement {
     max-width: 100%;
     max-height: 100%;
