Fully implemented events tab

--- a/src/Components/InfoGraphic.css
+++ b/src/Components/InfoGraphic.css
@@ -1,6 +1,7 @@
 .flexbox {
     display: flex;
-    flex: 1 0 auto;
+    flex: 1 0;
     flex-direction: column;
     margin-left: 15px;
+    max-width: 100%;
 }
