--- a/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
+++ b/src/Components/InfoGraphicHelpers/GlobalInfoGraphicHelpers.css
@@ -1,3 +1,16 @@
+.info-person {
+    display: flex;
+    flex: 1 0;
+    background: #394b59;
+    color: white;
+    position: relative;
+    flex-direction: column;
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+
 .dark-background {
     background: #394b59;
     color: white;
@@ -44,11 +57,6 @@
     position: absolute;
     right: 0;
     margin-right: 10px;
-}
-
-.info-person {
-    display: flex;
-    flex: 1 0 auto;
 }
 
 .no-person {
@@ -142,4 +150,28 @@
 
 .flexbox-centered {
     justify-content: center;
+}
+
+.flexbox-events {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
+.overflow-y {
+    overflow-y: auto;
+    height: 100%;
+}
+
+.event {
+    padding: 8px 0;
+    width: 100%;
+    flex-direction: column;
+    border-bottom: 1px solid white;
+    transition: all 300ms ease-in;
+    cursor: pointer;
+}
+
+.event:hover {
+    background-color: #455561;
 }
