--- a/src/Components/MobileView.css
+++ b/src/Components/MobileView.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    align-items: center;
     margin: 10px;
 }
 
@@ -16,4 +15,9 @@
 
 .mobile-current-events {
     margin-top: 10px;
+}
+
+.display {
+    display: flex;
+    flex: 1;
 }
