Login and force user update

--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -18,5 +18,9 @@
 
 .action-buttons .action-button {
     display: flex;
-    flex: 1;
+    flex: 2;
+}
+
+.action-buttons .divider {
+    width: 10px;
 }
