--- a/src/Components/Dialogs/UpdateUser.css
+++ b/src/Components/Dialogs/UpdateUser.css
@@ -23,7 +23,7 @@
     display: flex;
     margin: 0 5px;
     width: 1px;
-    background:#717D7E;
+    background:#1A5276;
     border-radius: 0.5px;
 }
 
