NODE_ENV to production, graph cleaned up

--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,8 +1,7 @@
 .graph-container {
-    top: 65px;
-    position: absolute;
-    height: 90%;
-    width: 99%;
+    margin-top: 10px;
+    height: 90vh;
+    width: 99vw;
 }
 
 .centered {
