--- a/src/Components/Splash/Splash.css
+++ b/src/Components/Splash/Splash.css
@@ -6,3 +6,11 @@
     max-width: 100vw;
     overflow: hidden;
 }
+
+html { 
+    background: url("./background.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
