--- a/src/Components/Splash/Splash.css
+++ b/src/Components/Splash/Splash.css
@@ -1,16 +1,167 @@
-.splash-page-background {
-    background: no-repeat center center fixed;
-    background-size: cover;
+img.splash-page-background {
+    min-height: 100%;
+    min-width: 500px;
+
+    width: 100%;
     height: auto;
-    width: auto;
-    max-width: 100vw;
-    overflow: hidden;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
-html { 
-    background: url("./background.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+.filter {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
+.white-filter {
+    background: white;
+    opacity: 0.2;
+    z-index: 2;
+}
+
+.black-filter {
+    background: black;
+    opacity: 0.6;
+    z-index: 3;
+}
+
+.splash-main-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+
+    overflow: hidden;
+    z-index: 4;
+    color: white;
+}
+
+.splash-header {
+    position: relative;
+    color: white;
+    text-align: center;
+    margin: 0 20px;
+
+    max-width: 100vw;
+    word-wrap: break-word;
+
+    animation: pop-in 3s ease;
+}
+
+@keyframes pop-in {
+    0% {
+        top: 15%;
+        transform: scale(0);
+    }
+    24% {
+        transform: scale(0);
+    }
+    25% {
+        transform: scale(0.45);
+    }
+    45% {
+        transform: scale(1.2);
+    }
+    50% {
+        transform: scale(1)
+    }
+    65% {
+        top: 15%;
+    }
+    90% {
+        top: -0.5%;
+    }
+    100% {
+        top: 0;
+        transform: none;
+    }
+}
+
+.splash-contents {
+    display: flex;
+    flex-direction: column;
+    max-width: 700px;
+    margin: 0 20px;
+
+    animation: fade-in 3.6s ease-in-out;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    86% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.9;
+    }
+}
+
+.splash-subheader {
+    display: flex;
+    justify-content: center;
+    color: white;
+    margin: 20px 0;
+}
+
+.splash-main-content {
+    display: flex;
+    flex: 1;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+
+.splash-bullet {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+    text-align: center;
+}
+
+.claim-button {
+    display: flex;
+    justify-content: center;
+    margin-top: -10px;
+}
+
+.claim-button .pt-button {
+    padding: 0 30px;
+}
+
+.border-right {
+    box-shadow: 1px 0 rgba(255, 255, 255, 0.4);
+}
+
+.splash-bullet-header {
+    font-size: 16px;
+    margin-bottom: 3px;
+}
+
+.splash-bullet-text {
+    font-size: 12px;
+    color: rgba(255, 255, 255, 0.8)
+}
+
+.splash-credit {
+    position: fixed;
+    right: 5px;
+    bottom: 5px;
+    text-align: right;
+    z-index: 4;
+    color: white;
+    font-size: 9px;
 }
