--- a/src/Components/InfoGraphic/InfoGraphic.css
+++ b/src/Components/InfoGraphic/InfoGraphic.css
@@ -1,6 +1,6 @@
 .main-info-graphic-container {
     display: flex;
     flex: 1 0;
-    margin: 10px 10px 0 10px;
+    margin: 10px 10px 0 0;
     flex-direction: column;
 }
