--- a/src/Components/Main.css
+++ b/src/Components/Main.css
@@ -1,9 +1,9 @@
 .graph-container {
     position: fixed;
     top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
 }
 
 .centered {
@@ -16,12 +16,10 @@
 
 .display-graph {
     display: flex;
-    flex: 1;
-    flex-basis: 85%;
+    flex: 17;
 }
 
 .info-graphic {
     display: flex;
-    flex: 1;
-    flex-basis: 15%;
+    flex: 3;
 }
