Fix navbar to left (#78)

--- a/src/Components/InfoGraphic/InfoGraphic.css
+++ b/src/Components/InfoGraphic/InfoGraphic.css
@@ -1,7 +1,6 @@
-.flexbox {
+.main-info-graphic-container {
     display: flex;
     flex: 1 0;
+    margin: 10px 10px 0 0;
     flex-direction: column;
-    margin-left: 15px;
-    max-width: 100%;
 }
