--- a/src/Components/Informational/InfoPerson.css
+++ b/src/Components/Informational/InfoPerson.css
@@ -1,14 +1,11 @@
 .info-person {
     display: flex;
-    flex: 1 0;
+    flex-direction: column;
+    flex: 1;
     background: #394b59;
     color: white;
-    position: relative;
-    flex-direction: column;
-    width: 100%;
     padding: 10px;
     border-radius: 5px;
-    margin-bottom: 15px;
 }
 
 .show-change {
@@ -21,17 +18,10 @@
     }
 }
 
-.name-container {
-    display: flex;
-    align-items: flex-start;
-}
-
 .info-person-name {
-    font-size: 18px;
-}
-
-.more-icon {
-    position: absolute;
-    right: 0;
-    margin-right: 10px;
+    display: flex;
+    font-size: 16px;
+    min-width: 0;
+    cursor: pointer;
+    text-decoration: underline dotted rgba(255, 255, 255, 0.25);
 }
