--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Work Sans", sans-serif;
+    font-weight: 200;
     color: #2E4053;
 }
 
