--- a/src/Components/Navbar/NavbarRow.css
+++ b/src/Components/Navbar/NavbarRow.css
@@ -1,23 +1,34 @@
 .navbar-button-component {
-    display: flex;
-    padding: 12.5px;
     margin: 1px 0;
-    align-items: center;
-    height: 50px;
-    transition: background-color 200ms ease-in-out;
-    cursor: pointer;
+    transition: background-color 200ms ease-in-out, height 300ms ease-in-out;
+    overflow: hidden;
 }
 
 .navbar-button-component:hover {
     background-color: #34495E;
 }
 
-.navbar-hovered-component {
+.navbar-button-header {
+    display: flex;
+    height: 25px;
+    margin: 12.5px;
+    flex-shrink: 0;
+    align-items: center;
+    cursor: pointer;
+}
+
+.navbar-button-text {
     display: flex;
     justify-content: flex-end;
     flex: 1;
     animation: fade-in 400ms ease-in;
     cursor: pointer;
+}
+
+.navbar-children {
+    display: flex;
+    flex: 1 1;
+    animation: fade-in 400ms ease-in;
 }
 
 @keyframes fade-in {
