--- a/src/Components/Navbar/NavbarComponents/Filters/Filters.css
+++ b/src/Components/Navbar/NavbarComponents/Filters/Filters.css
@@ -15,11 +15,69 @@
     justify-content: flex-end;
 }
 
-.filters-date-checkboxes {
+.filters-date-helper {
+    display: flex;
+    flex-direction: column;
+}
+
+.filters-date-helper-container {
+    background: gray;
+    border-radius: 3px;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+.filters-date-helper-single-row {
+    display: flex;
+    margin: 3px 0;
+    color: white;
+}
+
+.filters-date-line {
     display: flex;
     align-items: center;
+    flex: 1;
+    height: 1px;
+    margin: auto 5px;
+}
+
+.filters-date-line.blue {
+    background: #A9CCE3;
+}
+
+.filters-date-line.green {
+    background: #7DCEA0;
+}
+
+.filters-date-line.yellow {
+    background: #F7DC6F;
+}
+
+.filters-date-line.red {
+    background: #F1948A;
+}
+
+.filters-date-helper-single-row-title {
+    display: flex;
+    font-weight: bold;
+}
+
+.filters-date-helper-single-row-description {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.filters-date-checkboxes {
+    display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 5px;
+}
+
+.filters-date-single {
+    display: flex;
+    align-items: center;
+    margin: 5px;
 }
 
 .filters-date-checkboxes .bp3-control {
@@ -28,10 +86,14 @@
 
 .filters-box {
     margin-right: 3px;
-    width: 15px;
+    width: 25px;
     height: 25px;
     border-radius: 3px;
-    border: 1px black solid;
+    border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.filters-box.blue {
+    background: #7FB3D5;
 }
 
 .filters-box.green {
