--- a/src/Components/DisplayGraph/DisplayGraph.css
+++ b/src/Components/DisplayGraph/DisplayGraph.css
@@ -4,10 +4,7 @@
     flex: 1;
 }
 
-.connection-line {
-    stroke-width: 1;
-    stroke: black;
-    opacity: 0.1;
+.link {
     user-select: none;
 }
 
