Add in SCSS and CRA 2.0

--- a/src/Components/Common/Autocomplete.scss
+++ b/src/Components/Common/Autocomplete.scss
@@ -29,16 +29,20 @@
     cursor: pointer;
 }
 
-.autocomplete-row .key {
-    display: flex;
-    flex: 1 0 30%;
+.autocomplete-row {
+    &.key {
+        display: flex;
+        flex: 1 0 30%;
+    }
 }
 
-.autocomplete-row .value {
-    display: flex;
-    flex: 1 0 70%;
-    justify-content: flex-start;
-    text-overflow: ellipsis;
+.autocomplete-row {
+    &.value {
+        display: flex;
+        flex: 1 0 70%;
+        justify-content: flex-start;
+        text-overflow: ellipsis;
+    }
 }
 
 .autocomplete-row:hover {
