--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,40 +1,58 @@
+.login-parent-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .login-title {
-    display: flex;
-    flex: 1;
-    justify-content: center;
-    font-size: 35px;
-    margin-bottom: 10px;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  font-size: 35px;
+  margin-bottom: 10px;
 }
 
 .centered .login-center {
-    display: flex;
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
 }
 
 .login-main-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  align-items: center;
 }
 
 .login-divider {
-    width: 1px;
-    margin: 0 20px;
-    background: rgba(112, 112, 112, 0.25);
+  height: 1px;
+  width: 130%;
+  margin: 20px 0;
+  background: rgba(112, 112, 112, 0.45);
+  transform: translateX(-15%);
 }
 
 .login-textfield {
-    margin: 5px 0;
-    border: 1px solid rgba(112, 112, 112, 0.25);
-    border-radius: 3px;
-    padding: 3px 6px;
-    font-size: 12px;
-    min-width: 200px;
+  margin: 5px 0;
+  border: 1px solid rgba(112, 112, 112, 0.25);
+  border-radius: 3px;
+  padding: 3px 6px;
+  font-size: 12px;
+  min-width: 200px;
 }
 
 .login-action-button {
-    display: flex;
-    flex: 0;
-    margin-top: 5px;
-    min-width: 100px;
+  display: flex;
+  flex: 0;
+  margin-top: 5px;
+  min-width: 100px;
+}
+
+.login-reset-link {
+  margin-top: 5px;
+  font-size: 10px;
+  text-decoration: underline;
+  color: #5dade2;
+  cursor: pointer;
 }
