--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,21 +1,41 @@
+.login-page-background {
+  min-height: 100%;
+  min-width: 100%;
+
+  width: auto;
+  height: 100%;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+
+  filter: grayscale(35%);
+}
+
 .login-parent-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  background: white;
 }
 
 .login-title {
   display: flex;
   flex: 1;
   justify-content: center;
-  font-size: 35px;
+  font-size: 4vw;
   margin-bottom: 10px;
 }
 
-.centered .login-center {
+.login-center {
   display: flex;
-  flex-direction: column;
-  max-width: 200px;
+  margin-bottom: 35px;
 }
 
 .login-main-container {
@@ -26,9 +46,8 @@
 }
 
 .login-divider {
-  height: 1px;
-  width: 130%;
-  margin: 20px 0;
+  width: 1px;
+  margin: 0 20px;
   background: rgba(112, 112, 112, 0.45);
   transform: translateX(-15%);
 }
@@ -55,4 +74,42 @@
   text-decoration: underline;
   color: #5dade2;
   cursor: pointer;
+}
+
+.login-credit {
+  display: flex;
+  justify-content: flex-end;
+  position: fixed;
+  bottom: 3px;
+  right: 3px;
+  z-index: 2;
+  color: white;
+  font-size: 8px;
+  text-align: right;
+}
+
+.server-status {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  bottom: 3px;
+  left: 3px;
+  font-size: 8px;
+  z-index: 2;
+  color: white;
+
+  .server-status-circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 0 5px;
+  }
+
+  .serverIsAlive {
+    background-color: #52be80;
+  }
+
+  .serverIsDead {
+    background-color: #ec7063;
+  }
 }
