--- a/src/Components/Informational/InfoPerson.scss
+++ b/src/Components/Informational/InfoPerson.scss
@@ -2,7 +2,15 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  height: 50vh;
+  max-height: 40px;
+  min-height: 0;
+  transition: max-height 300ms ease-in-out, min-height 300ms ease-in-out;
+
+  &.should-show-events {
+    height: 50vh;
+    max-height: 50vh;
+    min-height: 50vh;
+  }
 }
 
 .info-person {
@@ -27,8 +35,20 @@
 
 .info-person-name {
   display: flex;
+  align-items: center;
   font-size: 16px;
   min-width: 0;
-  cursor: pointer;
   text-decoration: underline dotted rgba(255, 255, 255, 0.25);
+}
+
+.info-person-link {
+  cursor: pointer;
+  max-width: 200px;
+}
+
+.info-person-minimizer {
+  display: flex;
+  flex: 1;
+  justify-content: flex-end;
+  cursor: pointer;
 }
