--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,3 +1,11 @@
+.filter {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 .login-page-background {
   min-height: 100%;
   min-width: 100%;
@@ -13,6 +21,18 @@
   filter: grayscale(35%);
 }
 
+.login-white-filter {
+  background: white;
+  opacity: 0.2;
+  z-index: 2;
+}
+
+.login-black-filter {
+  background: black;
+  opacity: 0.2;
+  z-index: 3;
+}
+
 .login-parent-container {
   display: flex;
   flex-direction: column;
@@ -21,15 +41,18 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
-  background: white;
+  padding: 15px;
+  background: #fbfcfc;
+  border-radius: 6px;
+  box-shadow: -3px 4px 12px rgba(#2c3e50, 0.5);
+  z-index: 4;
 }
 
 .login-title {
   display: flex;
   flex: 1;
   justify-content: center;
-  font-size: 4vw;
+  font-size: 35px;
   margin-bottom: 10px;
 }
 
@@ -59,6 +82,7 @@
   padding: 3px 6px;
   font-size: 12px;
   min-width: 200px;
+  background: white;
 }
 
 .login-action-button {
@@ -82,10 +106,15 @@
   position: fixed;
   bottom: 3px;
   right: 3px;
-  z-index: 2;
+  z-index: 4;
   color: white;
   font-size: 8px;
   text-align: right;
+
+  a {
+    color: white;
+    margin: 0 3px;
+  }
 }
 
 .server-status {
@@ -95,7 +124,7 @@
   bottom: 3px;
   left: 3px;
   font-size: 8px;
-  z-index: 2;
+  z-index: 4;
   color: white;
 
   .server-status-circle {
