--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,9 @@
 body {
-    font-family: "Work Sans", sans-serif;
-    font-weight: 200;
-    color: #2E4053;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 200;
+  color: #2e4053;
 }
 
 h1 {
-    font-family: "Comfortaa", "cursive";
+  font-family: "Comfortaa", "cursive";
 }
