--- a/src/Components/Navbar/NavbarRow.scss
+++ b/src/Components/Navbar/NavbarRow.scss
@@ -1,44 +1,44 @@
 .navbar-button-component {
-    margin: 1px 0;
-    transition: background-color 200ms ease-in-out, height 300ms ease-in-out;
-    overflow: hidden;
+  margin: 1px 0;
+  transition: background-color 200ms ease-in-out, height 300ms ease-in-out;
+  overflow: hidden;
 }
 
 .navbar-button-component:hover {
-    background-color: #34495E;
+  background-color: #34495e;
 }
 
 .navbar-button-header {
-    display: flex;
-    height: 25px;
-    margin: 12.5px;
-    flex-shrink: 0;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  height: 25px;
+  margin: 12.5px;
+  flex-shrink: 0;
+  align-items: center;
+  cursor: pointer;
 }
 
 .navbar-button-text {
-    display: flex;
-    justify-content: flex-end;
-    flex: 1;
-    animation: fade-in 400ms ease-in;
-    cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  flex: 1;
+  animation: fade-in 400ms ease-in;
+  cursor: pointer;
 }
 
 .navbar-children {
-    display: flex;
-    flex: 1 1;
-    animation: fade-in 400ms ease-in;
+  display: flex;
+  flex: 1 1;
+  animation: fade-in 400ms ease-in;
 }
 
 @keyframes fade-in {
-    0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
